--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-credit-cards-2": "^1.0.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
