--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
