--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "apexcharts": "^4.4.0",
     "axios": "^1.7.9",
     "flowbite": "^3.1.1",
+    "lucide-react": "^0.482.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
