--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5002
-DATABASE_URI='mongodb+srv://muhammadusman01645:Usman586..@cluster0.q1z7epv.mongodb.net/SRG'
+DATABASE_URI=mongodb+srv://muhammadusman01645:Usman586..@cluster0.q1z7epv.mongodb.net/SRG
 JWT_SECRET='SRG123'
 NODE_ENV=development
 NUTRITION_API_KEY = "LIH9IByXK/0kadtxHgF3AA==VLKt5QqkHJDjFsy2"
